# Project-Ilo

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  FragmentShader.frag  GameObject.h  Light.cpp  Light.h  Player.cpp  Player.h  PlayerFragShader.frag  PlayerVertexShader.vert  Project Ilo.sln  Project Ilo.vcxproj  Project Ilo.vcxproj.filters  README.md  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Vertex.h  VertexShader.vert  Window.cpp  Window.h  firstPassFragment.frag  firstPassVertex.vert  geometryShader.geom  main.cpp  objLoader.cpp  objLoader.h  secondPassFrag.frag  secondPassVert.vert  thirdPassFrag.frag
Debug/: Project Ilo.ilk  main.obj.enc  vc140.idb
Debug/Project Ilo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project Ilo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: Project Ilo.iobj  Project Ilo.ipdb
Release/Project Ilo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project Ilo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/Modules/: FindSDL2.cmake
glad/src/: glad.c
shaders/: FragmentShader.frag  firstPassVertex.vert  secondPassFrag.frag  secondPassVert.vert  thirdPassFrag.frag  thirdPassVert.vert
shapes/: Deer1.mtl  lightCube.mtl  miniforest.mtl  untitled.mtl
src/: .Window.cpp.swp  Camera.cpp  Camera.h  Game.h  GameObject.h  Light.cpp  Light.h  Player.cpp  Player.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Vertex.h  Window.cpp  Window.h  main.cpp  objLoader.cpp  objLoader.h  tiny_obj_loader.h
